--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,26 +1,13 @@
 steps:
-# Steps to pull a docker image for pgadmin, push it to container registry and deploy it to cloud run.
-- name: "gcr.io/cloud-builders/docker"
-  args: ['pull', 'dpage/pgadmin4']
-- name: "gcr.io/cloud-builders/docker"
-  args: ['tag', 'dpage/pgadmin4','gcr.io/citric-dream-359919/pgadmin']
-- name: "gcr.io/cloud-builders/docker"
-  args: ['push', 'gcr.io/citric-dream-359919/pgadmin']
-  
-- name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
-  entrypoint: gcloud
-  args: ['run', 'deploy','pg-admin', '--image','gcr.io/citric-dream-359919/pgadmin', '--region','us-central1', '--add-cloudsql-instances', 'citric-dream-359919:us-central1:mypostgres','--platform','managed', '--port','80', '--allow-unauthenticated','--set-env-vars','PGADMIN_DEFAULT_EMAIL=user@gmail.com','--set-env-vars','PGADMIN_DEFAULT_PASSWORD=SuperSecret']
-  
 # Steps to build a docker image for go-microservice, push it to container registry and deploy it to cloud run.  
 - name: "gcr.io/cloud-builders/docker"
-  args: ['build', '-t', 'gcr.io/citric-dream-359919/go-microservice','.']
+  args: ['build', '-t', 'gcr.io/citric-dream-359919/microservice','.']
 - name: "gcr.io/cloud-builders/docker"
-  args: ['push', 'gcr.io/citric-dream-359919/go-microservice']
+  args: ['push', 'gcr.io/citric-dream-359919/microservice']
   
 - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
   entrypoint: gcloud
-  args: ['run', 'deploy','go-microservice', '--image','gcr.io/citric-dream-359919/go-microservice', '--region','us-central1', '--add-cloudsql-instances', 'citric-dream-359919:us-central1:mypostgres','--platform','managed', '--port','8080', '--allow-unauthenticated']
+  args: ['run', 'deploy','microservice', '--image','gcr.io/citric-dream-359919/microservice', '--region','us-central1', '--add-cloudsql-instances', 'citric-dream-359919:us-central1:mypostgres','--platform','managed', '--port','8081', '--allow-unauthenticated']
 images:
-- gcr.io/citric-dream-359919/go-microservice
-- gcr.io/citric-dream-359919/pgadmin
+- gcr.io/citric-dream-359919/microservice
 
